@@ -4,6 +4,9 @@ Pkgcore Release Notes
 See ChangeLog for full commit logs; this is summarized/major changes.
 
 
+* support lookup of a repo by it's name, rather than just by path.
+  This affects pquery --repo, pmaint sync, pmaint copy, pinspect, etc.
+
 * --debug now again enables full traceback output for config failures.
 
 
